[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bybit_mcp_server"
version = "0.1.0"
description = "Bybit Perpetual Futures Trading MCP Server"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name="André Figueira", email="andrefigueira93@gmail.com" }
]
dependencies = [
    "pybit>=2.4.0",
    "python-dotenv>=0.19.0",
    "pandas>=1.3.3",
    "numpy>=1.20.3",
    "matplotlib>=3.4.3",
    "schedule>=1.1.0",
    "mcp[cli]>=0.3.3",
    "tenacity>=8.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
py-modules = ["bybit_mcp_server"] 